--- a/index.html
+++ b/index.html
@@ -32,18 +32,24 @@
             <form id="formulario-calculadora">
               <fieldset>
                 <legend class="h2 text-center">Calculadora de Calorías</legend>
+
                 <div class="mb-3">
-                  <label for="edad" class="form-label h6">Edad</label>
+                  <label for="name" class="form-label h6">Nombre:</label>
+                  <input type="text" id="name" class="form-control" placeholder="Digíte su nombre">
+                </div>
+
+                <div class="mb-3">
+                  <label for="edad" class="form-label h6">Edad:</label>
                   <input type="number" id="edad" class="form-control" min="15" max="80" placeholder="Digíte su edad">
                 </div>
 
                 <div class="mb-3">
-                  <label for="peso" class="form-label h6">Peso</label>
+                  <label for="peso" class="form-label h6">Peso:</label>
                   <input type="number" id="peso" class="form-control" placeholder="Digíte su peso en kilogramos">
                 </div>
 
                 <div class="mb-3">
-                  <label for="altura" class="form-label h6">Altura</label>
+                  <label for="altura" class="form-label h6">Altura:</label>
                   <input type="number" id="altura" class="form-control" placeholder="Digíte su altura en centímetros">
                 </div>
 
